...
    <string name="status_syncing">Syncing messages</string>
    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <!-- Used to confirm acceptance of dialog boxes, warnings, errors, etc. -->
...
    <string name="search_action">Search</string>
    <string name="search_results">Search results</string>
    <string name="action_settings">Settings</string>
    <string name="account_settings_action">Account settings</string>
    <string name="folder_settings_action">Folder settings</string>
...
    <string name="quiet_time_starts">Quiet Time starts</string>
    <string name="quiet_time_ends">Quiet Time ends</string>
    <string name="account_setup_basics_title">Set up a new account</string>
    <string name="account_setup_basics_email_hint">Email address</string>
    <string name="account_setup_basics_password_hint">Password</string>
...
    <string name="account_setup_check_settings_fetch">Fetching account settings\u2026</string>
    <string name="account_setup_check_settings_canceling_msg">Canceling\u2026</string>
    <string name="account_setup_names_title">You\'re almost done!</string>
    <string name="account_setup_names_account_name_label">Give this account a name (optional):</string>
    <string name="account_setup_names_user_name_label">Type your name (displays on outgoing messages):</string>
...
    <string name="account_setup_auth_type_xoauth2">OAuth 2.0</string>
    <string name="account_setup_auth_type_tls_client_certificate">Client certificate</string>
    <string name="account_setup_incoming_title">Incoming server settings</string>
    <string name="account_setup_incoming_username_label">Username</string>
    <string name="account_setup_incoming_password_label">Password</string>
...
    <string name="account_setup_incoming_webdav_mailbox_path_label">Mailbox alias</string>
    <string name="account_setup_incoming_webdav_mailbox_path_hint">Optional</string>
    <string name="account_setup_outgoing_title">Outgoing server settings</string>
    <string name="account_setup_outgoing_smtp_server_label">SMTP server</string>
    <string name="account_setup_outgoing_port_label">Port</string>
...
    <string name="account_setup_failed_dlg_continue_action">Continue</string>
    <string name="account_settings_push_advanced_title">Advanced</string>
    <string name="account_settings_title_fmt">Account settings</string>
    <string name="account_settings_default_label">Default account</string>
    <string name="account_settings_default_summary">Send mail from this account by default</string>
...
    <string name="messagelist_sent_to_me_sigil">»</string>
    <string name="messagelist_sent_cc_me_sigil">›</string>
    <string name="import_export_action">Settings Import &amp; Export</string>
    <string name="settings_export_account">Export account settings</string>
    <string name="settings_export_all">Export settings and accounts</string>
    <string name="settings_import_dialog_title">Import</string>
    <string name="settings_export_dialog_title">Export</string>
    <string name="settings_import">Import settings</string>
    <string name="settings_import_selection">Import selection</string>
    <string name="settings_import_global_settings">Global settings</string>
    <string name="settings_exporting">Exporting settings…</string>
...
    <string name="settings_export_success_header">Export succeeded</string>
    <string name="settings_export_failed_header">Export failed</string>
    <string name="settings_import_success_header">Import succeeded</string>
    <string name="settings_import_failed_header">Import failed</string>
    <string name="settings_import_activate_account_header">Activate account</string>
    <string name="settings_import_activate_account_intro">To be able to use the account \"<xliff:g id="account">%1$s</xliff:g>\" you need to provide the <xliff:g id="server_passwords">%2$s</xliff:g>.</string>
    <plurals name="settings_import_server_passwords">
...
