...
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/account_email"
                android:hint="@string/account_setup_basics_email_hint"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent" />

...
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
            </Spinner>

            <EditText
                android:id="@+id/account_password"
                android:inputType="textPassword"
                android:hint="@string/account_setup_basics_password_hint"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:nextFocusDown="@+id/next" />

            <CheckBox
                android:id="@+id/show_password"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/account_setup_basics_show_password" />
...
