...
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:hint="@string/account_setup_names_account_name_label"
                android:contentDescription="@string/account_setup_names_account_name_label" />

            <EditText
                android:id="@+id/account_name"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:hint="@string/account_setup_names_user_name_label"
                android:contentDescription="@string/account_setup_names_user_name_label" />
...
            <View
                android:layout_height="0dip"
                android:layout_width="fill_parent"
                android:layout_weight="1" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/pep_enable_sync_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pep_sync_enable_account"
                android:visibility="visible" />
        </LinearLayout>
...
