...


                <FrameLayout
                    android:id="@+id/add_account_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/accounts_list"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="gone"
                    tools:visibility="visible">

...
